[package]
name = "types"
version = "0.1.1"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Type condtions."
license = "MIT"
license-file = "./License"
documentation = "https://docs.rs/types/0.1.1/types/"
homepage = "https://github.com/clearloop/types"
repository = "https://github.com/clearloop/types"
categories = ["development-tools"]
keywords = ["type", "condition"]
