[package]
name = "types"
version = "0.1.2"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Type condtions."
license = "MIT"
documentation = "https://docs.rs/types/0.1.1/types/"
homepage = "https://github.com/clearloop/types"
repository = "https://github.com/clearloop/types"
categories = ["development-tools"]
keywords = ["type", "condition"]

[badges]
codecov = { repository = "clearloop/sonata" }
travis-ci = { repository = "clearloop/sonata" }